kustomize/base/matverseny-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matverseny-frontend
  labels:
    app.kubernetes.io/name: matverseny-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: matverseny-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: matverseny-frontend
    spec:
      serviceAccountName: matverseny-frontend
      securityContext:
        fsGroup: 2000
      containers:
        - name: matverseny-frontend
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: ghcr.io/verseghy/matverseny-frontend:v3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - mountPath: /var/lib/nginx/tmp/
              name: nginx-tmp
            - mountPath: /var/log/nginx
              name: logs
      volumes:
        - name: nginx-tmp
          emptyDir: {}
        - name: logs
          emptyDir: {}
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: matverseny-frontend
