kustomize/base/matverseny-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matverseny-frontend
  labels:
    app.kubernetes.io/name: matverseny-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: matverseny-frontend
